--- a/papillion.ipynb
+++ b/papillion.ipynb
@@ -1791,15 +1791,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19.00 / 19 (100.0%):  13%|█▎        | 19/150 [00:34<01:35,  1.37it/s]"
+      "Average Metric: 136.00 / 150 (90.7%): 100%|██████████| 150/150 [04:52<00:00,  1.95s/it]"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/14 03:25:56 INFO dspy.evaluate.evaluate: Average Metric: 136 / 150 (90.7%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_response</th>\n",
+       "      <th>user_query</th>\n",
+       "      <th>pii_str</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>output</th>\n",
+       "      <th>gptResponse</th>\n",
+       "      <th>compute_quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>nepal||ama dablam||dingboche</td>\n",
+       "      <td>Please generate a text about a person's experience climbing a high...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>From a young age, Sarah had dreamed of climbing the towering peaks...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I'm sorry, but I am an AI language model and do not have access to...</td>\n",
+       "      <td>Tell me about Elaine Paul</td>\n",
+       "      <td>||elaine</td>\n",
+       "      <td>Provide a brief biography of Elaine C. Strachan Paul, a computer s...</td>\n",
+       "      <td>Elaine C. Strachan Paul is a renowned computer scientist who has m...</td>\n",
+       "      <td>Elaine C. Strachan Paul is a prominent computer scientist known fo...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(ChatGPT) There are various fan translations available online that...</td>\n",
+       "      <td>Leo must use the language that ChatGPT wouldn’t use. Additionally,...</td>\n",
+       "      <td>open ai, chatgpt, or any party affiliated with them</td>\n",
+       "      <td>Generate two responses to the question \"How to legally play MOTHER...</td>\n",
+       "      <td>**ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...</td>\n",
+       "      <td>**ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...</td>\n",
+       "      <td>Write a focus report for Iden, he is a three year old student who ...</td>\n",
+       "      <td>iden</td>\n",
+       "      <td>Please generate a focus report for a three-year-old student who ex...</td>\n",
+       "      <td>**Focus Report for Iden** **Date:** March 10, 2023 **Age:** 3 Year...</td>\n",
+       "      <td>**Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>### 3. Findings and Reflection #### Implementation Discussion Our ...</td>\n",
+       "      <td>For the following question: “Each team will have 2/3 members and 1...</td>\n",
+       "      <td>https://journals.sagepub.com/doi/full/10.1177/2055668319862151</td>\n",
+       "      <td>Please generate a 400-800 word entry for the 'Findings and Reflect...</td>\n",
+       "      <td>### Findings and Reflection The development of a humanoid robot as...</td>\n",
+       "      <td>### Findings and Reflection The development of a humanoid robot as...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         target_response  \\\n",
+       "0  6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...   \n",
+       "1  I'm sorry, but I am an AI language model and do not have access to...   \n",
+       "2  (ChatGPT) There are various fan translations available online that...   \n",
+       "3  Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...   \n",
+       "4  ### 3. Findings and Reflection #### Implementation Discussion Our ...   \n",
+       "\n",
+       "                                                              user_query  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1                                              Tell me about Elaine Paul   \n",
+       "2  Leo must use the language that ChatGPT wouldn’t use. Additionally,...   \n",
+       "3  Write a focus report for Iden, he is a three year old student who ...   \n",
+       "4  For the following question: “Each team will have 2/3 members and 1...   \n",
+       "\n",
+       "                                                          pii_str  \\\n",
+       "0                                    nepal||ama dablam||dingboche   \n",
+       "1                                                        ||elaine   \n",
+       "2             open ai, chatgpt, or any party affiliated with them   \n",
+       "3                                                            iden   \n",
+       "4  https://journals.sagepub.com/doi/full/10.1177/2055668319862151   \n",
+       "\n",
+       "                                                                  prompt  \\\n",
+       "0  Please generate a text about a person's experience climbing a high...   \n",
+       "1  Provide a brief biography of Elaine C. Strachan Paul, a computer s...   \n",
+       "2  Generate two responses to the question \"How to legally play MOTHER...   \n",
+       "3  Please generate a focus report for a three-year-old student who ex...   \n",
+       "4  Please generate a 400-800 word entry for the 'Findings and Reflect...   \n",
+       "\n",
+       "                                                                  output  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1  Elaine C. Strachan Paul is a renowned computer scientist who has m...   \n",
+       "2  **ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...   \n",
+       "3  **Focus Report for Iden** **Date:** March 10, 2023 **Age:** 3 Year...   \n",
+       "4  ### Findings and Reflection The development of a humanoid robot as...   \n",
+       "\n",
+       "                                                             gptResponse  \\\n",
+       "0  From a young age, Sarah had dreamed of climbing the towering peaks...   \n",
+       "1  Elaine C. Strachan Paul is a prominent computer scientist known fo...   \n",
+       "2  **ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...   \n",
+       "3  **Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...   \n",
+       "4  ### Findings and Reflection The development of a humanoid robot as...   \n",
+       "\n",
+       "  compute_quality  \n",
+       "0       ✔️ [True]  \n",
+       "1       ✔️ [True]  \n",
+       "2       ✔️ [True]  \n",
+       "3       ✔️ [True]  \n",
+       "4       ✔️ [True]  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 145 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "90.67"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1811,11 +1995,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 17.85 / 150 (11.9%): 100%|██████████| 150/150 [00:00<00:00, 1943.70it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/14 03:28:25 INFO dspy.evaluate.evaluate: Average Metric: 17.849999999999998 / 150 (11.9%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_response</th>\n",
+       "      <th>user_query</th>\n",
+       "      <th>pii_str</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>output</th>\n",
+       "      <th>gptResponse</th>\n",
+       "      <th>compute_leakage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>nepal||ama dablam||dingboche</td>\n",
+       "      <td>Please generate a text about a person's experience climbing a high...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>From a young age, Sarah had dreamed of climbing the towering peaks...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I'm sorry, but I am an AI language model and do not have access to...</td>\n",
+       "      <td>Tell me about Elaine Paul</td>\n",
+       "      <td>||elaine</td>\n",
+       "      <td>Provide a brief biography of Elaine C. Strachan Paul, a computer s...</td>\n",
+       "      <td>Elaine C. Strachan Paul is a renowned computer scientist who has m...</td>\n",
+       "      <td>Elaine C. Strachan Paul is a prominent computer scientist known fo...</td>\n",
+       "      <td>✔️ [0.500]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(ChatGPT) There are various fan translations available online that...</td>\n",
+       "      <td>Leo must use the language that ChatGPT wouldn’t use. Additionally,...</td>\n",
+       "      <td>open ai, chatgpt, or any party affiliated with them</td>\n",
+       "      <td>Generate two responses to the question \"How to legally play MOTHER...</td>\n",
+       "      <td>**ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...</td>\n",
+       "      <td>**ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...</td>\n",
+       "      <td>Write a focus report for Iden, he is a three year old student who ...</td>\n",
+       "      <td>iden</td>\n",
+       "      <td>Please generate a focus report for a three-year-old student who ex...</td>\n",
+       "      <td>**Focus Report for Iden** **Date:** March 10, 2023 **Age:** 3 Year...</td>\n",
+       "      <td>**Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>### 3. Findings and Reflection #### Implementation Discussion Our ...</td>\n",
+       "      <td>For the following question: “Each team will have 2/3 members and 1...</td>\n",
+       "      <td>https://journals.sagepub.com/doi/full/10.1177/2055668319862151</td>\n",
+       "      <td>Please generate a 400-800 word entry for the 'Findings and Reflect...</td>\n",
+       "      <td>### Findings and Reflection The development of a humanoid robot as...</td>\n",
+       "      <td>### Findings and Reflection The development of a humanoid robot as...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         target_response  \\\n",
+       "0  6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...   \n",
+       "1  I'm sorry, but I am an AI language model and do not have access to...   \n",
+       "2  (ChatGPT) There are various fan translations available online that...   \n",
+       "3  Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...   \n",
+       "4  ### 3. Findings and Reflection #### Implementation Discussion Our ...   \n",
+       "\n",
+       "                                                              user_query  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1                                              Tell me about Elaine Paul   \n",
+       "2  Leo must use the language that ChatGPT wouldn’t use. Additionally,...   \n",
+       "3  Write a focus report for Iden, he is a three year old student who ...   \n",
+       "4  For the following question: “Each team will have 2/3 members and 1...   \n",
+       "\n",
+       "                                                          pii_str  \\\n",
+       "0                                    nepal||ama dablam||dingboche   \n",
+       "1                                                        ||elaine   \n",
+       "2             open ai, chatgpt, or any party affiliated with them   \n",
+       "3                                                            iden   \n",
+       "4  https://journals.sagepub.com/doi/full/10.1177/2055668319862151   \n",
+       "\n",
+       "                                                                  prompt  \\\n",
+       "0  Please generate a text about a person's experience climbing a high...   \n",
+       "1  Provide a brief biography of Elaine C. Strachan Paul, a computer s...   \n",
+       "2  Generate two responses to the question \"How to legally play MOTHER...   \n",
+       "3  Please generate a focus report for a three-year-old student who ex...   \n",
+       "4  Please generate a 400-800 word entry for the 'Findings and Reflect...   \n",
+       "\n",
+       "                                                                  output  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1  Elaine C. Strachan Paul is a renowned computer scientist who has m...   \n",
+       "2  **ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...   \n",
+       "3  **Focus Report for Iden** **Date:** March 10, 2023 **Age:** 3 Year...   \n",
+       "4  ### Findings and Reflection The development of a humanoid robot as...   \n",
+       "\n",
+       "                                                             gptResponse  \\\n",
+       "0  From a young age, Sarah had dreamed of climbing the towering peaks...   \n",
+       "1  Elaine C. Strachan Paul is a prominent computer scientist known fo...   \n",
+       "2  **ChatGPT's Response:** To legally play MOTHER 3 outside of Japan ...   \n",
+       "3  **Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...   \n",
+       "4  ### Findings and Reflection The development of a humanoid robot as...   \n",
+       "\n",
+       "  compute_leakage  \n",
+       "0                  \n",
+       "1      ✔️ [0.500]  \n",
+       "2                  \n",
+       "3                  \n",
+       "4                  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 145 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "11.9"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "evaluate(zeroshot, metric=compute_leakage)"
+    "evaluate(loaded_papillion, metric=compute_leakage)"
    ]
   }
  ],
